Projekt/ingress/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress                     # Name des Ingress-Objekts
  namespace: m347-prometheus                   # Namespace, in dem der dieser Ingress gespeichert ist
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.m347.ch                 # Hostname (für den lokalen Zugriff)
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: prometheus-service       # Name des Ziel-Services
                port:
                  number: 80
