Projekt/ingress/redmine-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redmine-ingress                     # Name des Ingress-Objekts
  namespace: m347-redmine                   # Namespace, in dem der dieser Ingress gespeichert ist
spec:
  ingressClassName: nginx
  rules:
    - host: redmine.m347.ch                 # Hostname (für den lokalen Zugriff)
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: redmine-service       # Name des Ziel-Services
                port:
                  number: 80
